[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/Level01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Level04.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Level03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Level02.png" type="Texture" id=4]
[ext_resource path="res://Nodes/Obstacles/Flag.tscn" type="PackedScene" id=5]
[ext_resource path="res://Nodes/Obstacles/StartPosition.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Levels.gd" type="Script" id=7]

[sub_resource type="PhysicsMaterial" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 356.582, 13.9185 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.8737, 129.272 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 188.309, 14.5131 )

[node name="Levels" type="Node2D"]
script = ExtResource( 7 )

[node name="Level1" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Level1"]
texture = ExtResource( 1 )
centered = false

[node name="Level2" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Level2"]
texture = ExtResource( 4 )
centered = false

[node name="RigidBody2D" type="RigidBody2D" parent="Level2"]
mode = 1
mass = 1000.0
physics_material_override = SubResource( 4 )
gravity_scale = 0.0
sleeping = true

[node name="Bumper1" type="CollisionShape2D" parent="Level2/RigidBody2D"]
position = Vector2( 635.631, 434.655 )
shape = SubResource( 1 )
disabled = true

[node name="Bumper2" type="CollisionShape2D" parent="Level2/RigidBody2D"]
position = Vector2( 456.061, 129.624 )
shape = SubResource( 2 )
disabled = true

[node name="Bumper3" type="CollisionShape2D" parent="Level2/RigidBody2D"]
position = Vector2( 657.631, 243.193 )
shape = SubResource( 3 )
disabled = true

[node name="Level3" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Level3"]
texture = ExtResource( 3 )
centered = false

[node name="Level4" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Level4"]
texture = ExtResource( 2 )
centered = false

[node name="Flag" parent="." instance=ExtResource( 5 )]
position = Vector2( 221, 635 )

[node name="StartPosition" parent="." instance=ExtResource( 6 )]
position = Vector2( 1171, 415 )
